--- a/entry-1/index.html
+++ b/entry-1/index.html
@@ -13,7 +13,7 @@
         <div id="container">
             <header>
                 <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
-                <a href="/entry-2/index.html" class="header-text">When I Was 7 Years Old</a>
+                <a href="/entry-2/index.html" class="header-text">Inner Loneliness</a>
             </header>
             <main>
                 <h1> What Is Loneliness? </h1>
