--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -1,98 +1,120 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>My Loneliness</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div id="container">
-            <header>
-                <a href="../entry-1/index.html" class="header-text">What Is Loneliness?</a>
-                <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
-                <a href="/entry-3/index.html" class="header-text">House Taken Over</a>
-            </header>
-            <main>
-                <h1>When I Was 7 Years Old...</h1>
-                <div class="text-image">
-                    <div class="text">
-                        <p> People say there’s a moment in every child’s life when they become aware of their own existence.
-                            I remember mine as if it was yesterday. I lived in a house on the outskirts of the city, in a
-                            neighborhood surrounded by industrial garages and closed doors. My parents worked tirelessly,
-                            hoping to give me everything they had lacked in their own lives, sacrificing their time and
-                            energy. Meanwhile, I waited in daycare until every other child had gone home, waiting for my
-                            parents to pick me up, just to have dinner, sleep, and repeat the routine. </p>
-                        <p> My grandparents, who babysat me, were often busy with chores, so I explored the empty house and
-                            my imagination. I had a few scraps of paper, old clothes, a TV, and a handful of toys. The world
-                            was simple, empty, but still a marvel.</p>
-                        <p> And yet, there was an unshakable feeling—an ache for something more, a yearning I couldn’t name. </p>
-                        <p> When I turned seven, my family could finally afford to move to an apartment complex in a
-                            neighborhood full of families, small but beautiful houses, and parks. </p>
-                    </div>
-                    <div class="image">
-                        <img src="../assets/family_photos/Foto_abuelos-casa-restrepo-editada.jpg" class="image-1">
-                    </div>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Inner Loneliness</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div id="container">
+        <header>
+            <a href="../entry-1/index.html" class="header-text">What Is Loneliness?</a>
+            <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
+            <a href="/entry-3/index.html" class="header-text">Loneliness in Family</a>
+        </header>
+        <main>
+            <h1>The Silent Ride</h1>
+            <div class="text-image">
+                <div class="text">
+                    <p> This exploration of solitude begins with a personal journey—my first 
+                        encounter with loneliness. Even though it happened so many years ago, 
+                        it remains one of my earliest memories, and I find it almost amusing 
+                        that, from the very beginning, loneliness was there. I didn’t know 
+                        then that it would become a constant companion through different stages
+                        of my life.</p>
+                    <p> I lived in a house on the outskirts of the city, in a neighborhood 
+                        surrounded by industrial garages and closed doors. My parents worked
+                        tirelessly, hoping to give me everything they had lacked in their own 
+                        lives, sacrificing their time and energy. Meanwhile, I waited in 
+                        daycare until every other child had gone home, waiting for my parents 
+                        to pick me up, just to have dinner, sleep, and repeat the routine. </p>
+                    <p> My grandparents, who babysat me, were often busy with chores, so I 
+                        explored the empty house and my imagination. I had a few scraps of 
+                        paper, old clothes, a TV, and a handful of toys. The world was 
+                        simple, empty, but still a marvel.</p>
                 </div>
-                <div class="text-image">
-                    <div class="image">
-                        <img src="../assets/family_photos/Foto_abula-tatarabuela_editada.jpg" class="image-1">
-                    </div>
-                    <div class="text">
-                        <p> On our first day there, a Saturday afternoon, I was amazed by the playground in the complex. It
-                            was alive with children—laughing, running, and playing together. As the shy kid who was used to
-                            playing alone after daycare, the playground seemed like a new world filled with the possibility…
-                            of belonging. </p>
-                        <p> I grabbed a tricycle, a gift from a past Christmas, while my parents were busy unpacking. I
-                            rushed to the playground, eager to play, to laugh, to share with the kids I’d been watching from
-                            my apartment window. I circled around the park, observing the children in groups: playing
-                            soccer, jumping around, sliding down the slides. </p>
-                        <p> At first, I was excited, but soon I started to feel intimidated. I realized I didn’t know how to
-                            approach these kids, how to talk to them, or how to join their games. I watched how effortlessly
-                            they engaged with one another—laughing, connecting, becoming friends. Each lap around the
-                            playground left me feeling more uncertain. The playground seemed to expand, and the groups of
-                            children appeared to drift further and further away. </p>
-                    </div>
+                <div class="image">
+                    <img src="../assets/family_photos/Foto_abuelos-casa-restrepo-editada.jpg" class="image-1">
                 </div>
-                <div class="text-image">
-                    <div class="text">
-                        <p> Then suddenly, as if it were a sign, my tricycle broke. It snapped into two pieces. I stood
-                            there in the center of the playground, which had once been filled with colors and possibilities;
-                            now, everything suddenly felt gray. </p>
-                        <p> I stood there, holding the broken pieces, watching the other children, so effortlessly
-                            connected, and wondered: What secret allowed them to belong? What did they have that I lacked?</p>
-                        <p> And so I stood there, surrounded by a crowd of strangers, feeling small, broken, and incredibly
-                            alone. </p>
-                        <p> I’m not sure if this is what people mean when they talk about the moment we first become
-                            conscious of ourselves. But there I was, wondering if the days once filled with wide halls of
-                            imagination, cartoons, and toys had been replaced by questions I couldn’t answer. Where was the
-                            class that taught you how to make friends? Did everyone feel this way? Was simply being
-                            surrounded by people never enough to fill that ache for connection? </p>
-                    </div>
-                    <div class="image">
-                        <img src="../assets/family_photos/Foto_papa-mama-editada.jpg" class="image-1">
-                    </div>
+            </div>
+            <div class="text-image">
+                <div class="image">
+                    <img src="../assets/family_photos/Foto_abula-tatarabuela_editada.jpg" class="image-1">
                 </div>
-                <div id="final">
-                    <div id="final-image">
-                        <img src="../assets/family_photos/Foto_cumpleaños-mio.jpg" id="image-2">
-                    </div>
-                    <div class="text">
-                        <p> I picked up my broken tricycle and walked back to my apartment—my new "home." With boxes
-                            everywhere, furniture still unassembled, and adults rushing around too busy to notice me, too
-                            busy to notice the broken toy or the broken heart. </p>
-                    </div>
+                <div class="text">
+                    <p> And yet, there was an unshakable feeling—an ache for something more, 
+                        a yearning I couldn’t name. </p>
+                    <p> When I turned seven, my family could finally afford to move to an 
+                        apartment complex in a neighborhood full of families, small but 
+                        beautiful houses, and parks. </p>
+                    <p> On our first day there, a Saturday afternoon, I was amazed by the 
+                        playground in the complex. It was alive with children—laughing, 
+                        running, and playing together. As the shy kid who was used to playing 
+                        alone after daycare, the playground seemed like a new world filled 
+                        with the possibility… of belonging. </p>
+                    <p> I grabbed a tricycle, a gift from a past Christmas, while my parents 
+                        were busy unpacking. I rushed to the playground, eager to play, to 
+                        laugh, to share with the kids I’d been watching from my apartment 
+                        window. I circled around the park, observing the children in groups: 
+                        playing soccer, jumping around, sliding down the slides. </p>
                 </div>
-            </main>
-            <footer>
-                <p id="my-name">Lucia Vanegas</p>
-                <p id="entry-name">Flexbox</p>
-                <p id="class-name">Core 1: Interaction</p>
-            </footer>
-        </div>
-        <script src="../entry-2/script.js" async defer></script>
-    </body>
+            </div>
+            <div class="text-image">
+                <div class="text">
+                    
+                    <p> At first, I was excited, but soon I started to feel intimidated. I 
+                        realized I didn’t know how to approach these kids, how to talk to them,
+                        or how to join their games. I watched how effortlessly they engaged 
+                        with one another—laughing, connecting, becoming friends. Each lap 
+                        around the playground left me feeling more uncertain. The playground 
+                        seemed to expand, and the groups of children appeared to drift 
+                        further and further away. </p>
+                    <p> Then suddenly, as if it were a sign, my tricycle broke. It snapped 
+                        into two pieces. I stood there in the center of the playground, which 
+                        had once been filled with colors and possibilities; now, everything 
+                        suddenly felt gray. </p>
+                    <p> I stood there, holding the broken pieces, watching the other children, 
+                        so effortlessly connected, and wondered: What secret allowed them to 
+                        belong? What did they have that I lacked? </p>
+                </div>
+                <div class="image">
+                    <img src="../assets/family_photos/Foto_papa-mama-editada.jpg" class="image-1">
+                </div>
+            </div>
+            <div id="final">
+                <div id="final-image">
+                    <img src="../assets/family_photos/Foto_cumpleaños-mio.jpg" id="image-2">
+                </div>
+                <div class="text">
+                    <p> And so I stood there, surrounded by a crowd of strangers, feeling 
+                        small, broken, and incredibly alone. </p>
+                    <p> I’m not sure if this is what people mean when they talk about the 
+                        moment we first become conscious of ourselves. But there I was, 
+                        wondering if the days once filled with wide halls of imagination, 
+                        cartoons, and toys had been replaced by questions I couldn’t answer. 
+                        Where was the class that taught you how to make friends? Did everyone 
+                        feel this way? Was simply being surrounded by people never enough 
+                        to fill that ache for connection? </p>
+                    <p> I picked up my broken tricycle and walked back to my apartment—my new 
+                        "home." With boxes everywhere, furniture still unassembled, and adults 
+                        rushing around too busy to notice me, too busy to notice the broken toy 
+                        or the broken heart. </p>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <p id="my-name">Lucia Vanegas</p>
+            <p id="entry-name">Flexbox</p>
+            <p id="class-name">Core 1: Interaction</p>
+        </footer>
+    </div>
+    <script src="../entry-2/script.js" async defer></script>
+</body>
+
 </html>
