--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>House Taken Over</title>
+        <title>Loneliness in Family</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
@@ -12,9 +12,9 @@
     <body>
         <div id="container">
             <header>
-                <a href="../entry-2/index.html" class="header-text">When I Was 7 Years Old...</a>
+                <a href="../entry-2/index.html" class="header-text">Inner Loneliness</a>
                 <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
-                <a href="/entry-4/index.html" class="header-text">The Nobodies</a>
+                <a href="/entry-4/index.html" class="header-text">Collective Loneliness</a>
             </header>
             <main>
                 <h1>House Taken Over</h1>
