--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>The Nobodies</title>
+        <title>Collective Loneliness</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
@@ -12,9 +12,9 @@
     <body>
         <div id="container">
             <header>
-                <a href="../entry-3/index.html" class="header-text">House Taken Over</a>
+                <a href="../entry-3/index.html" class="header-text">Loneliness in Family</a>
                 <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
-                <a href="/entry-5/index.html" class="header-text">The Hardest “No” of My Life</a>
+                <a href="/entry-5/index.html" class="header-text">Loneliness in Love</a>
             </header>
             <main>
                 <h1>The Nobodies</h1>
