--- a/entry-6/index.html
+++ b/entry-6/index.html
@@ -1,30 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div id="container">
-            <header>
-                <a href="../entry-5/index.html" class="header-text">The Hardest “No” of My Life</a>
-                <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
-                <a href="/entry-7/index.html" class="header-text">Entry 7</a>
-            </header>
-            <main>
-    
-            </main>
-            <footer>
-                <p id="my-name">Lucia Vanegas</p>
-                <p id="entry-name"></p>
-                <p id="class-name">Core 1: Interaction</p>
-            </footer>
-        </div>
-        <script src="" async defer></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>The Dialectic of Loneliness</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div id="container">
+        <header>
+            <a href="../entry-5/index.html" class="header-text">Loneliness in Love</a>
+            <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
+            <a href="/entry-7/index.html" class="header-text">Entry 7</a>
+        </header>
+        <main>
+            
+            <!-- <div id="text">
+                <p> Max was many things at once and, as he wished, he could be a painter, botanist, actor, philosopher,
+                    novelist, bird, fish... Perhaps because, in essence, he was what people call "a dreamer."</p>
+                <p> An untiring explorer, Max loved to climb all the possibilities of thought and shape them through an
+                    inexhaustible diversity of colors, textures, forms, materials, and figures that he combined,
+                    intertwining them with his fierce curiosity about the world.</p>
+                <p> Max disobeyed his mother, time, and the wind.</p>
+                <p> He defied reason and preferred warm chills, sharp fields, square circles, neatly combed roots.</p>
+                <p> He also delighted in spying on the most intimate and hidden corners of things, expanding their
+                    details and setting them free.</p>
+                <p> He surrounded himself with flowers, papers and books, cardboard, maps and silk fabrics, pencils and
+                    brushes, postcards, photos, engravings—in short, anything with which he could create magic by
+                    combining images and words.</p>
+                <p> With each book, he discovered maddened moons, impossible territories, a vast and profound world, both
+                    underwater and alpine... </p>
+                <p> full of possibilities.</p>
+                <p> One day, he met Leonora, who dreamed of transforming into a horse,</p>
+                <p> and he understood that he had always wanted to be a bird.</p>
+                <p> And so, Max and Leonora fell in love, wed with the wind, and lived at the epicenter of a strange
+                    dream, in a fevered, symbolic, and dreamlike era.</p>
+                <p> But dreams last only as long as a yawn, and Max realized that not even the strongest glue in the
+                    world could allow them to prolong theirs.</p>
+                <p> And as he spent hours, mute as a fish, watching the drawings in the sky, the flocks of birds in
+                    flight, he learned to paint portraits…</p>
+                <p> to paint flowers…</p>
+                <p> to fly without wings with his feet planted on the ground and to draw as the branches do when shaken
+                    by the wind.</p>
+                <p> That was Max, the bird-man, and what we tell here is only a small part of his extraordinary story.</p>
+            </div> -->
+        </main>
+        <footer>
+            <p id="my-name">Lucia Vanegas</p>
+            <p id="entry-name"></p>
+            <p id="class-name">Core 1: Interaction</p>
+        </footer>
+    </div>
+    <script src="" async defer></script>
+</body>
+
 </html>
