--- a/entry-6/index.html
+++ b/entry-6/index.html
@@ -16,39 +16,53 @@
         <header>
             <a href="../entry-5/index.html" class="header-text">Loneliness in Love</a>
             <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
-            <a href="/entry-7/index.html" class="header-text">Entry 7</a>
+            <a href="/entry-7/index.html" class="header-text">Love and Letting Go</a>
         </header>
         <main>
-            
-            <!-- <div id="text">
-                <p> Max was many things at once and, as he wished, he could be a painter, botanist, actor, philosopher,
-                    novelist, bird, fish... Perhaps because, in essence, he was what people call "a dreamer."</p>
-                <p> An untiring explorer, Max loved to climb all the possibilities of thought and shape them through an
-                    inexhaustible diversity of colors, textures, forms, materials, and figures that he combined,
-                    intertwining them with his fierce curiosity about the world.</p>
-                <p> Max disobeyed his mother, time, and the wind.</p>
-                <p> He defied reason and preferred warm chills, sharp fields, square circles, neatly combed roots.</p>
-                <p> He also delighted in spying on the most intimate and hidden corners of things, expanding their
-                    details and setting them free.</p>
-                <p> He surrounded himself with flowers, papers and books, cardboard, maps and silk fabrics, pencils and
-                    brushes, postcards, photos, engravings—in short, anything with which he could create magic by
-                    combining images and words.</p>
-                <p> With each book, he discovered maddened moons, impossible territories, a vast and profound world, both
-                    underwater and alpine... </p>
-                <p> full of possibilities.</p>
-                <p> One day, he met Leonora, who dreamed of transforming into a horse,</p>
-                <p> and he understood that he had always wanted to be a bird.</p>
-                <p> And so, Max and Leonora fell in love, wed with the wind, and lived at the epicenter of a strange
-                    dream, in a fevered, symbolic, and dreamlike era.</p>
-                <p> But dreams last only as long as a yawn, and Max realized that not even the strongest glue in the
-                    world could allow them to prolong theirs.</p>
-                <p> And as he spent hours, mute as a fish, watching the drawings in the sky, the flocks of birds in
-                    flight, he learned to paint portraits…</p>
-                <p> to paint flowers…</p>
-                <p> to fly without wings with his feet planted on the ground and to draw as the branches do when shaken
-                    by the wind.</p>
-                <p> That was Max, the bird-man, and what we tell here is only a small part of his extraordinary story.</p>
-            </div> -->
+            <h1>The Dialectic of Loneliness</h1>
+            <div id="text">
+                <p>One way to rethink loneliness is through the lens of dialectics—a perspective that helps us see
+                    beyond rigid opposites and uncover the complexities within our experiences. Dialectics is a way of
+                    understanding reality through the interaction of opposing forces, revealing a more nuanced truth.
+                    Rooted in Plato’s philosophy, which emphasizes the evolution of thought through dialogue and
+                    contradiction, dialectics teaches us that no experience exists in isolation; every state of being
+                    contains its own counterpoint.</p>
+                <p>This concept is key to how we navigate emotions like sadness and loneliness. A dialectical
+                    perspective sees reality as interconnected—loneliness cannot be fully understood without also
+                    considering connection. Instead of viewing emotions as fixed, dialectics encourages us to recognize
+                    the dynamic forces at play: how loneliness and belonging, sadness and growth, loss and
+                    transformation coexist.</p>
+                <p>Another fundamental principle of dialectics is that reality is not static but constantly evolving.
+                    Every emotion carries its own contradictions—within loneliness, there may be self-discovery; within
+                    sorrow, the seeds of change. Holding both truths at once allows for movement beyond rigid
+                    narratives. Rather than getting stuck in a singular definition of solitude or suffering, a
+                    dialectical approach invites a broader, more fluid understanding.</p>
+                <p>Ultimately, embracing the dialectical nature of emotions helps reframe loneliness not as a fixed
+                    state, but as part of a continuous process—one that holds both struggle and possibility.</p>
+            </div>
+            <h3>Dialectics remind us that</h3>
+            <ol>
+                <li>The universe is filled with opposing sides/opposing forces</li>
+                    <ul>
+                        <li>There is always more than one way to see a situation, and more than one way to solve a problem</li>
+                        <li>Two things that seem like opposites can both be true</li>
+                    </ul>
+                <li>Everything and every person is connected in some way</li>
+                    <ul>
+                        <li>The waves and the ocean are one</li>
+                        <li>The slightest move of the butterfly affects the furthest star</li>
+                    </ul>
+                <li>Change is the only constant</li>
+                    <ul>
+                        <li>Meaning and truth evolve over time</li>
+                        <li>Each moment is new; reality itself changes with each moment</li>
+                    </ul>
+                <li>Change is transactional</li>
+                    <ul>
+                        <li>What we do influences our environment and other people in it</li>
+                        <li>The environment and other people influence us</li>
+                    </ul>
+            </ol>
         </main>
         <footer>
             <p id="my-name">Lucia Vanegas</p>
