--- a/entry-8/index.html
+++ b/entry-8/index.html
@@ -1,30 +1,114 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div id="container">
-            <header>
-                <a href="../entry-7/index.html" class="header-text">Entry 7</a>
-                <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
-                <a href="/entry-9/index.html" class="header-text">Entry 9</a>
-            </header>
-            <main>
-    
-            </main>
-            <footer>
-                <p id="my-name">Lucia Vanegas</p>
-                <p id="entry-name"></p>
-                <p id="class-name">Core 1: Interaction</p>
-            </footer>
-        </div>
-        <script src="" async defer></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Distance and Identity</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.typekit.net/mxo6tpa.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div id="container">
+        <header>
+            <a href="../entry-7/index.html" class="header-text">Love and Letting Go</a>
+            <a href="/index.html" class="header-text" id="main-page">Shared Isolation</a>
+            <a href="/entry-9/index.html" class="header-text">Entry 9</a>
+        </header>
+        <main>
+            <h1>Finding Home in the Ache of Distance</h1>
+            <h2>La Tierra del Olvido</h2>
+            <h3>By Carlos Vives ft. Fanny Lu, Fonseca, Maluma, Andrea Echeverri, Cholo Valderrama, Coral Group & Herencia de Timbiquí</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/cCKxVHf-yWg?si=7KqtPgpLKY-3_qVH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div id="text">
+                <p>
+                    We're born in a blessed and a generous life<br>
+                    And that's why we wanna feel with you all<br>
+                    All up and jive
+                </p>
+                <p>
+                    Like the moon that shines, lighting up the roads at night<br>
+                    Like the leaves in the wind, like the sun that chases the cold<br>
+                    Like the earth to the rain, like the sea that waits for the river<br>
+                    That’s how I wait for your return, to the land of oblivion
+                </p>
+                <p>
+                    Like my fears that drift away, when I sail in your gaze<br>
+                    Like you awaken my senses, with your love-struck voice<br>
+                    With your childlike smile, how you move my soul<br>
+                    How you steal my sleep, how you take my calm away
+                </p>
+                <p>
+                    You hold the key to my heart, I love you<br>
+                    More than my own life, because without your love, I would die<br>
+                    You hold the key to my heart, I love you<br>
+                    More than my own life, because without your love, I would die
+                </p>
+                <p>
+                    Like the moon that shines, lighting up the roads at night<br>
+                    Like the leaves in the wind, like the sun that chases the cold<br>
+                    Like the earth to the rain, like the sea that waits for the river<br>
+                    That’s how I wait for your return, to the land of oblivion
+                </p>
+                <p>
+                    Like my fears that drift away, when I sail in your gaze<br>
+                    Like you awaken my senses, with your love-struck voice<br>
+                    With your childlike smile, how you move my soul<br>
+                    How you steal my sleep, how you take my calm away
+                </p>
+                <p>
+                    From the plains, I bring a joropo, with the bass strings in tune<br>
+                    Clearing my throat, I see a singing traveler<br>
+                    Who shouts with an open chest, full of peace and emotion<br>
+                    Colombia, my dear homeland, I carry you in my heart
+                </p>
+                <p>
+                    You hold the key to my heart, I love you<br>
+                    More than my own life, because without your love, I would die<br>
+                    You hold the key to my heart, I love you<br>
+                    More than my own life, because without your love, I would die
+                </p>
+                <p>
+                    When I’m far from home, how I remember you<br>
+                    Living in paradise means living on your land
+                </p>
+                <p>
+                    From the Amazon, straight up to La Guajira<br>
+                    I know the road is long, but the mountains inspire<br>
+                    From south to north, from west to east<br>
+                    My Colombia is growing, and that’s how it feels
+                </p>
+                <p>
+                    That’s how it feels, if I dare to compare<br>
+                    My little land to your sculptural beauty<br>
+                    Both so beautiful, like the flowers<br>
+                    Both enchant me, they are my loves
+                </p>
+                <p>
+                    You hold the key to my heart, I love you<br>
+                    More than my own life, because without your love, I would die<br>
+                    You hold the key to my heart, I love you<br>
+                    More than my own life, because without your love, I would die
+                </p>
+                <p>
+                    Keké, what you think about the seas of paradise in here<br>
+                    This is Colombia<br>
+                    When will it be? When we say<br>
+                    We say islanders, we all have the years but islanders cannot die<br>
+                    A nice place, paradise
+                </p>
+            </div>
+        </main>
+        <footer>
+            <p id="my-name">Lucia Vanegas</p>
+            <p id="entry-name"></p>
+            <p id="class-name">Core 1: Interaction</p>
+        </footer>
+    </div>
+    <script src="" async defer></script>
+</body>
+
 </html>
